<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_spyModules"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="#FFFFFF" />

        <Switch
            android:id="@+id/cameraSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSpyCamera"
            android:text="@string/activate_camera"
            android:textColor="#FFFFFF" />

        <Switch
            android:id="@+id/microphoneSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSpyMicrophone"
            android:text="@string/activate_microphone"
            android:textColor="#FFFFFF" />

        <Switch
            android:id="@+id/locationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSpyLocation"
            android:text="@string/activate_location"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/subtitle_persistenceModules"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:id="@+id/radioPersistence"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioJobScheduler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:buttonTint="@color/colorAccent"
                android:text="@string/start_jobScheduler"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/radioAlarmManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorAccent"
                android:text="@string/start_alarmManager"
                android:textColor="#FFFFFF" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/subtitle_interval"
            android:textColorHint="#FFFFFF"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editText_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_schedulerTime"
            android:inputType="numberSigned"
            android:maxLength="10"
            android:minEms="1"
            android:text="120"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/logs_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/title_status"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/StartSpy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="onClickStartSpy"
            android:background="@color/background_btn"
            android:text="@string/start_spy"
            android:textColor="@color/text_btn" />

        <Button
            android:id="@+id/StopSpy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickStopSpy"
            android:layout_marginTop="10dp"
            android:background="@color/background_btn"
            android:text="@string/stop_spy"
            android:textColor="@color/text_btn" />
    </LinearLayout>
</ScrollView>
