<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activity.MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#31000000"
            android:textColor="#FFFFFF"
            app:tabIndicatorColor="#FFFFC107"
            app:tabTextColor="#FFFFFF">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:icon="@drawable/ic_remove_red_eye_black_24dp"
                android:text="@string/tab_spy"
                android:textColor="#FFFFFF" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:icon="@drawable/ic_photo_black_24dp"
                android:text="@string/tab_images"
                android:textColor="#FFFFFF" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:icon="@drawable/ic_mic_black_24dp"
                android:text="@string/tab_files"
                android:textColor="#FFFFFF" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:icon="@drawable/ic_map_black_24dp"
                android:text="@string/tab_location"
                android:textColor="#FFFFFF" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>